public enum OrderStatus {
    WAITING_PAYMENT,
    PAID
}